--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NOWPAYMENTS_API_KEY ="5VXM7Q8-R854JTW-J6A21V0-324ZHC8"
 
-PORT=6000
-
+PORT=8000
+DBConnection=mongodb+srv://arohabuci_db_user:ASE12345ase@kudispheredb1.glj1ezm.mongodb.net/?retryWrites=true&w=majority&appName=KUdisphereDB1
