--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.13.8"
+    "mongoose": "^6.13.8",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
