--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NOWPAYMENTS_API_KEY ="5VXM7Q8-R854JTW-J6A21V0-324ZHC8"
 
 PORT=8000
-DBConnection=mongodb://localhost:27017
-# mongodb+srv://kudisphereventure:ASE12345ase@kudispheredb1.glj1ezm.mongodb.net/?retryWrites=true&w=majority&appName=KUdisphereDB1
+DBConnection=mongodb+srv://kudisphereventure:ASE12345ase@kudispheredb1.glj1ezm.mongodb.net/?retryWrites=true&w=majority&appName=KUdisphereDB1
+
+# mongodb://localhost:27017
